# VulkanDevelopment

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
AssetSystem/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  asset_main.cpp  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h
Assets/: Volvo S90.mesh  Volvo S90.mtl  lightTest.mesh  map.tx  monkey.mesh  plane.mesh  plane.mtl  untitled.mesh  untitled.mtl
TestingTargets/: CMakeLists.txt  testAssimp.cpp
VulkanDevelopment/: CMakeLists.txt  VulkanDevelopment.cpp  VulkanDevelopment.h
ovr_sdk_win_32.0.0/Samples/OculusRoomTiny/Common/: Win32_VulkanAppUtil.h
ovr_sdk_win_32.0.0/Samples/OculusRoomTiny/OculusRoomTiny_Vk/: main.cpp
shaders/: anim.vert  anim.vert.spv  coloured_triangle.vert  default_lit.frag  shadow.frag.spv  shadow.vert  shadow.vert.spv  textured_lit.frag  textured_lit.frag.spv  tri_mesh.vert  tri_mesh.vert.spv  triangle.vert
src/: CMakeLists.txt  check.h  converter.cpp  converter.h  vk_descriptors.cpp  vk_descriptors.h  vk_ecs.cpp  vk_ecs.h  vk_engine.cpp  vk_engine.h  vk_gameobject.cpp  vk_gameobject.h  vk_init.cpp  vk_init.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
